feat: adds thunder client api call     - decorates the subscriber group models to apply some little clean ups     - refactors permission sets model     - adds GetSubscriberGroupList     - adds AddNewSubscriberGroup     - adds DeleteSubscriberGroup
