# docs/api/swagger.yaml
@@ -8,14 +8,6 @@ definitions:
         description: This field determines the detailed information about raise error
         type: string
     type: object
-  models.AccessLevelPermsSwagger:
-    properties:
-      access_level_perms_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
-        type: string
-      permission_set_id:
-        type: string
-    type: object
   models.Organization:
     type: object
   models.OrganizationDetailsResponse:
@@ -76,60 +68,7 @@ definitions:
         example: sample organization
         type: string
     type: object
-  models.OrganizationalLevelPermsSwagger:
-    properties:
-      organizational_level_perms_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
-        type: string
-      permission_set_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
-        type: string
-    type: object
-  models.PaymentLevelPermsSwagger:
-    properties:
-      payment_level_perms_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
-        type: string
-      permission_set_id:
-        type: string
-    type: object
-  models.PermissionSetsSwagger:
-    properties:
-      access_level_perms:
-        $ref: '#/definitions/models.AccessLevelPermsSwagger'
-      organizational_level_perms:
-        $ref: '#/definitions/models.OrganizationalLevelPermsSwagger'
-      payment_level_perms:
-        $ref: '#/definitions/models.PaymentLevelPermsSwagger'
-      permission_sets_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
-        type: string
-      report_level_perms:
-        $ref: '#/definitions/models.ReportLevelPermsSwagger'
-      subscriber_group_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7b
-        type: string
-      subscriber_level_perms:
-        $ref: '#/definitions/models.SubscriberLevelPermsSwagger'
-    type: object
-  models.ReportLevelPermsSwagger:
-    properties:
-      permission_set_id:
-        type: string
-      report_level_perms_id:
-        example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
-        type: string
-    type: object
-  models.SubscriberGroupCreateResponse:
-    properties:
-      id:
-        type: string
-      message:
-        type: string
-      name:
-        type: string
-    type: object
-  models.SubscriberGroupSwagger:
+  models.SubscriberGroupAPI:
     properties:
       organization_id:
         type: string
@@ -140,14 +79,25 @@ definitions:
       subscriber_group_name:
         type: string
       subscriber_group_permissions:
-        $ref: '#/definitions/models.PermissionSetsSwagger'
+        additionalProperties: true
+        type: object
     type: object
-  models.SubscriberLevelPermsSwagger:
+  models.SubscriberGroupCreateResponse:
     properties:
-      permission_set_id:
+      id:
         type: string
-      subscriber_level_perms_id:
+      message:
+        type: string
+      name:
+        type: string
+    type: object
+  models.SubscriberGroupMinimal:
+    properties:
+      subscriber_group_id:
         example: ed83a2ba-c55c-4297-b2ac-df7b02abdd7a
+        type: string
+      subscriber_group_name:
+        example: sample group
         type: string
     type: object
 info:
@@ -253,173 +203,6 @@ paths:
       summary: Add a new organization
       tags:
       - Organization
-  /organization/{organization-id}/subscriber-group:
-    get:
-      consumes:
-      - application/json
-      description: Returns a list of all subscriber groups within an organization
-      parameters:
-      - description: Organization ID
-        in: path
-        name: organization-id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful response
-          schema:
-            items:
-              $ref: '#/definitions/models.SubscriberGroupSwagger'
-            type: array
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.APIError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.APIError'
-      summary: List all Subscriber Groups
-      tags:
-      - Organization
-  /organization/{organization-id}/subscriber-group/:
-    post:
-      consumes:
-      - application/json
-      description: Adds a new subscriber group within an organization
-      parameters:
-      - description: Subscriber Group ID
-        in: path
-        name: organization-id
-        required: true
-        type: integer
-      - description: Subscriber Group Details
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/models.SubscriberGroupSwagger'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Successfully added new subscriber group
-          schema:
-            $ref: '#/definitions/models.SubscriberGroupCreateResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.APIError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.APIError'
-      summary: Add New Subscriber Group
-      tags:
-      - Organization
-  /organization/{organization-id}/subscriber-group/{subscriber-group-id}:
-    delete:
-      consumes:
-      - application/json
-      description: Deletes a specific subscriber group within an organization by its
-        ID
-      parameters:
-      - description: Subscriber Group ID
-        in: path
-        name: subscriber-group-id
-        required: true
-        type: integer
-      - description: Subscriber Group ID
-        in: path
-        name: organization-id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.APIError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.APIError'
-      summary: Delete a Subscriber Group
-      tags:
-      - Organization
-    get:
-      consumes:
-      - application/json
-      description: Retrieves the details of a specific subscriber group within an
-        organization
-      parameters:
-      - description: Organization ID
-        in: path
-        name: organization-id
-        required: true
-        type: integer
-      - description: Subscriber Group ID
-        in: path
-        name: subscriber-group-id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful response
-          schema:
-            $ref: '#/definitions/models.SubscriberGroupSwagger'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.APIError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.APIError'
-      summary: Get Subscriber Group Detail
-      tags:
-      - Organization
-    patch:
-      consumes:
-      - application/json
-      description: Updates the settings of a specific subscriber group within an organization
-        by its ID
-      parameters:
-      - description: Subscriber Group ID
-        in: path
-        name: subscriber-group-id
-        required: true
-        type: integer
-      - description: Subscriber Group ID
-        in: path
-        name: organization-id
-        required: true
-        type: integer
-      - description: Subscriber Group Settings
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/models.SubscriberGroupSwagger'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: No Content
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.APIError'
-      summary: Update Subscriber Group
-      tags:
-      - Organization
   /organization/recover/profile:
     patch:
       description: \
@@ -483,6 +266,174 @@ paths:
           schema:
             $ref: '#/definitions/models.APIError'
       summary: Get organization profile by name or ID
+      tags:
+      - Organization
+  /subscriber-group/{subscriber-group-id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a specific subscriber group within an organization by its
+        ID
+      parameters:
+      - description: Subscriber Group ID
+        in: path
+        name: subscriber-group-id
+        required: true
+        type: integer
+      - description: Subscriber Group ID
+        in: path
+        name: organization-id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.APIError'
+      summary: Delete a Subscriber Group
+      tags:
+      - Organization
+    patch:
+      consumes:
+      - application/json
+      description: Updates the settings of a specific subscriber group within an organization
+        by its ID
+      parameters:
+      - description: Subscriber Group ID
+        in: path
+        name: subscriber-group-id
+        required: true
+        type: integer
+      - description: Subscriber Group ID
+        in: path
+        name: organization-id
+        required: true
+        type: integer
+      - description: Subscriber Group Settings
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.SubscriberGroupAPI'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: No Content
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.APIError'
+      summary: Update Subscriber Group
+      tags:
+      - Organization
+  /subscriber-group/list/{organization_id}:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of all subscriber groups within an organization
+      parameters:
+      - description: Organization ID
+        in: path
+        name: organization_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+          schema:
+            items:
+              $ref: '#/definitions/models.SubscriberGroupMinimal'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.APIError'
+      summary: List all Subscriber Groups
+      tags:
+      - Organization
+  /subscriber_group/{organization_id}:
+    post:
+      consumes:
+      - application/json
+      description: Adds a new subscriber group within an organization
+      parameters:
+      - description: Subscriber Group ID
+        in: path
+        name: organization_id
+        required: true
+        type: integer
+      - description: Subscriber Group Details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.SubscriberGroupAPI'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successfully added new subscriber group
+          schema:
+            $ref: '#/definitions/models.SubscriberGroupCreateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.APIError'
+      summary: Add New Subscriber Group
+      tags:
+      - Organization
+  /subscriber_group/{subscriber_group_id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the details of a specific subscriber group within an
+        organization
+      parameters:
+      - description: Organization ID
+        in: path
+        name: organization_id
+        required: true
+        type: integer
+      - description: Subscriber Group ID
+        in: path
+        name: subscriber_group_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+          schema:
+            $ref: '#/definitions/models.SubscriberGroupAPI'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.APIError'
+      summary: Get Subscriber Group Detail
       tags:
       - Organization
 swagger: "2.0"
